--- a/href.html
+++ b/href.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="./index.css">
 </head>
 <body>
   <header>
@@ -23,7 +23,6 @@
 
     <div class="main-grid-href">
       <h1>공지</h1>
-      <hr class="main-grid-div-hr">
       <p>수고하셨습니다</p>
     </div>
 
